crates/nil-ffi/gen/libnil.h

typedef unsigned int RequestId;
/**
 * [`Client::get_workshop_recruit_catalog`](nil_client::Client::get_workshop_recruit_catalog)
 */
void nil_get_workshop_recruit_catalog(RequestId request_id, const char *json_req);
/**
 * [`Client::get_world_bots`](nil_client::Client::get_world_bots)
 */
void nil_get_world_bots(RequestId request_id, const char *json_req);
/**
 * [`Client::get_world_config`](nil_client::Client::get_world_config)
 */
void nil_get_world_config(RequestId request_id, const char *json_req);
/**
 * [`Client::get_world_personnel`](nil_client::Client::get_world_personnel)
 */
void nil_get_world_personnel(RequestId request_id, const char *json_req);
/**
 * [`Client::get_world_players`](nil_client::Client::get_world_players)
 */
void nil_get_world_players(RequestId request_id, const char *json_req);
/**
 * [`Client::get_world_precursors`](nil_client::Client::get_world_precursors)
 */
void nil_get_world_precursors(RequestId request_id, const char *json_req);
/**
 * [`Client::get_world_stats`](nil_client::Client::get_world_stats)
 */
void nil_get_world_stats(RequestId request_id, const char *json_req);
/**
 * [`Client::player_exists`](nil_client::Client::player_exists)
 */
void nil_player_exists(RequestId request_id, const char *json_req);
/**
 * [`Client::push_chat_message`](nil_client::Client::push_chat_message)
 */
void nil_push_chat_message(RequestId request_id, const char *json_req);
/**
 * [`Client::rename_city`](nil_client::Client::rename_city)
 */
void nil_rename_city(RequestId request_id, const char *json_req);
/**
 * [`Client::request_maneuver`](nil_client::Client::request_maneuver)
 */
void nil_request_maneuver(RequestId request_id, const char *json_req);
/**
 * [`Client::save_local_world`](nil_client::Client::save_local_world)
 */
void nil_save_local_world(RequestId request_id, const char *json_req);
/**
 * [`Client::search_city`](nil_client::Client::search_city)
 */
void nil_search_city(RequestId request_id, const char *json_req);
/**
 * [`Client::search_public_city`](nil_client::Client::search_public_city)
 */
void nil_search_public_city(RequestId request_id, const char *json_req);
/**
 * [`Client::version`](nil_client::Client::version)
 */
void nil_server_version(RequestId request_id);
/**
 * [`Client::set_player_ready`](nil_client::Client::set_player_ready)
 */
void nil_set_player_ready(RequestId request_id, const char *json_req);
/**
 * [`Client::set_player_status`](nil_client::Client::set_player_status)
 */
void nil_set_player_status(RequestId request_id, const char *json_req);
/**
 * [`Client::simulate_battle`](nil_client::Client::simulate_battle)
 */
void nil_simulate_battle(RequestId request_id, const char *json_req);
/**
 * [`Client::spawn_player`](nil_client::Client::spawn_player)
 */
void nil_spawn_player(RequestId request_id, const char *json_req);
/**
 * [`Client::start_round`](nil_client::Client::start_round)
 */
void nil_start_round(RequestId request_id, const char *json_req);
/**
 * [`Client::toggle_building`](nil_client::Client::toggle_building)
 */
void nil_toggle_building(RequestId request_id, const char *json_req);
/**
 * [`Client::user_exists`](nil_client::Client::user_exists)
 */
void nil_user_exists(RequestId request_id, const char *json_req);
/**
 * [`Client::validate_token`](nil_client::Client::validate_token)
 */
void nil_validate_token(RequestId request_id, const char *json_req);