crates/nil-ffi/gen/libnil.cs


        [DllImport(__DllName, EntryPoint = "nil_get_workshop_recruit_catalog", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_workshop_recruit_catalog(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_world_bots", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_world_bots(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_world_config", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_world_config(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_world_personnel", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_world_personnel(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_world_players", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_world_players(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_world_precursors", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_world_precursors(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_get_world_stats", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_get_world_stats(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_player_exists", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_player_exists(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_push_chat_message", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_push_chat_message(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_rename_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_rename_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_request_maneuver", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_request_maneuver(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_save_local_world", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_save_local_world(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_search_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_search_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_search_public_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_search_public_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_server_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_server_version();

        [DllImport(__DllName, EntryPoint = "nil_set_player_ready", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_set_player_ready(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_set_player_status", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_set_player_status(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_simulate_battle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_simulate_battle(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_spawn_player", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_spawn_player(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_start_round", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_start_round(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_toggle_building", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_toggle_building(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_user_exists", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_user_exists(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_validate_token", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_validate_token(byte* req);


    }


    public enum StatusCode : int
    {
        OK = 0,
        ERR_NULL_POINTER = 1,
        ERR_NOTHING_TO_POLL = 2,
        ERR_SERIALIZATION = 3,
        ERR_UNKNOWN,
    }


}
